# anytype-mcp

./: README.md  anytype.py  anytype_authenticator.py  anytype_store.py  ingest_only.py  main.py  pyproject.toml  server.py
anytype_api/: __init__.py  anytype_store.py
endpoints/tools/: __init__.py  anytype_tools.py  ingestion_tools.py
scripts/: ingest_only.py
utils/: __init__.py  anytype_authenticator.py  embedding_utils.py
