[project]
name = "anytype-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.4",
    "fastmcp>=1.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "nltk>=3.9.1",
    "ollama>=0.4.7",
    "platformdirs>=4.3.7",
    "sentence-transformers>=4.0.2",
]
